environment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
spec:
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 80        # puerto que expone el Service
      targetPort: 5000 # puerto en el que escucha Flask dentro del pod
  type: ClusterIP
